--- a/.github/workflows/validate_pr_title.yaml
+++ b/.github/workflows/validate_pr_title.yaml
@@ -26,6 +26,8 @@ permissions:
 jobs:
   validate-title:
     runs-on: ubuntu-latest
+    env:
+      prefix: "❌ The PR title must start with one of the allowed prefixes:"
     steps:
       - name: Extract PR title
         id: title
@@ -84,10 +86,24 @@ jobs:
           script: |
             const { owner, repo, number } = context.issue;
             const prefixes = "${{ inputs.prefixes }}";
-            const body = `❌ The PR title must start with one of the allowed prefixes:\n${prefixes}\nPlease update the title and re-run the checks.`;
+            const body = `${prefix}\n${prefixes}\nPlease update the title and re-run the checks.`;
             await github.rest.issues.createComment({
               owner,
               repo,
               issue_number: number,
               body
             });
+
+      - name: Remove previous failure comment if exists
+        if: success() && github.event_name == 'pull_request'
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const { owner, repo, number } = context.issue;
+            const marker = "${prefix}"; // Unique marker in your comment
+            const comments = await github.rest.issues.listComments({ owner, repo, issue_number: number });
+            const target = comments.data.find(c => c.body.includes(marker));
+            if (target) {
+              await github.rest.issues.deleteComment({ owner, repo, comment_id: target.id });
+              console.log(`Removed previous validation comment: ${target.id}`);
+            }
