--- a/.github/workflows/validate_pr_title.yaml
+++ b/.github/workflows/validate_pr_title.yaml
@@ -9,48 +9,54 @@ on:
         type: string
         default: 'feat:,fix:,chore:,docs:,refactor:,test:,build:,ci:'
       case_insensitive:
-        description: 'Set to true to ignore case'
+        description: 'Ignore case'
         required: false
         type: boolean
         default: true
-      comment_on_failure:
-        description: 'Add a PR comment when invalid'
+      manage_comment:
+        description: 'Create/update/delete validation comment'
         required: false
         type: boolean
         default: true
 
 permissions:
+  # Needed to list, create, update, delete issue comments on PRs
   pull-requests: write
   contents: read
 
 jobs:
   validate-title:
     runs-on: ubuntu-latest
-    env:
-      prefix: "❌ The PR title must start with one of the allowed prefixes:"
+    outputs:
+      valid: ${{ steps.validate.outputs.valid }}
     steps:
-      - name: Extract PR title
+      - name: Compute PR title or commit message
         id: title
         run: |
-          echo "title<<EOF" | tee -a $GITHUB_OUTPUT
-          echo "${{ github.event.pull_request.title }}" | tee -a $GITHUB_OUTPUT
-          echo "EOF" | tee -a $GITHUB_OUTPUT
+          if [ "${{ github.event_name }}" = "pull_request" ]; then
+            echo "text<<EOF" | tee -a $GITHUB_OUTPUT
+            echo "${{ github.event.pull_request.title }}" | tee -a $GITHUB_OUTPUT
+            echo "EOF" | tee -a $GITHUB_OUTPUT
+          else
+            echo "text<<EOF" | tee -a $GITHUB_OUTPUT
+            echo "${{ github.event.head_commit.message }}" | tee -a $GITHUB_OUTPUT
+            echo "EOF" | tee -a $GITHUB_OUTPUT
+          fi
 
-      - name: Validate title
+      - name: Validate text against prefixes
         id: validate
         env:
           PREFIXES: ${{ inputs.prefixes }}
           CASE_INSENSITIVE: ${{ inputs.case_insensitive }}
         run: |
-          TITLE="${{ steps.title.outputs.title }}"
-
+          TEXT="${{ steps.title.outputs.text }}"
           if [ "${CASE_INSENSITIVE}" = "true" ]; then
-            TITLE_LOWER="$(printf '%s' "$TITLE" | tr '[:upper:]' '[:lower:]')"
+            TEXT_LOWER="$(printf '%s' "$TEXT" | tr '[:upper:]' '[:lower:]')"
           else
-            TITLE_LOWER="$TITLE"
+            TEXT_LOWER="$TEXT"
           fi
 
-          printf $'TITLE_LOWER: "%s"\n' "${TITLE_LOWER}"
+          printf $'TEXT_LOWER: "%s"\n' "${TEXT_LOWER}"
 
           IFS=',' read -r -a arr <<< "$PREFIXES"
 
@@ -62,48 +68,62 @@ jobs:
             else
               P_LOWER="$p"
             fi
-
-            case "$TITLE_LOWER" in
+            case "$TEXT_LOWER" in
               "$P_LOWER"*) match="true"; break ;;
             esac
           done
 
-          echo "Title: $TITLE"
+          echo "Title: $TEXT"
           echo "Allowed prefixes: $PREFIXES"
-          echo "Match: $match"
-
+          echo "Text: $TEXT"
+          echo "valid=$match" | tee -a $GITHUB_OUTPUT
           if [ "$match" != "true" ]; then
-            echo "valid=false" | tee -a $GITHUB_OUTPUT
             exit 1
-          else
-            echo "valid=true" | tee -a $GITHUB_OUTPUT
           fi
 
-      - name: Comment on PR if invalid
-        if: failure() && inputs.comment_on_failure == true
+      - name: Upsert/delete validation comment
+        if: inputs.manage_comment == true && github.event_name == 'pull_request'
         uses: actions/github-script@v7
         with:
           script: |
+            const marker = '<!-- pr-title-validation -->';
             const { owner, repo, number } = context.issue;
-            const prefixes = "${{ inputs.prefixes }}";
-            const body = `${prefix}\n${prefixes}\nPlease update the title and re-run the checks.`;
-            await github.rest.issues.createComment({
-              owner,
-              repo,
-              issue_number: number,
-              body
-            });
 
-      - name: Remove previous failure comment if exists
-        if: success() && github.event_name == 'pull_request'
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const { owner, repo, number } = context.issue;
-            const marker = "${prefix}"; // Unique marker in your comment
-            const comments = await github.rest.issues.listComments({ owner, repo, issue_number: number });
-            const target = comments.data.find(c => c.body.includes(marker));
-            if (target) {
-              await github.rest.issues.deleteComment({ owner, repo, comment_id: target.id });
-              console.log(`Removed previous validation comment: ${target.id}`);
+            // Paginate through all comments to find the marker
+            const comments = await github.paginate(
+              github.rest.issues.listComments,
+              { owner, repo, issue_number: number, per_page: 100 }
+            );
+            const existing = comments.find(c => typeof c.body === 'string' && c.body.includes(marker));
+
+            const isValid = "${{ steps.validate.outputs.valid }}".toLowerCase() === "true";
+
+            if (isValid) {
+              // Delete stale comment when valid
+              if (existing) {
+                await github.rest.issues.deleteComment({
+                  owner, repo, comment_id: existing.id
+                });
+                core.info(`Deleted validation comment ${existing.id}`);
+              } else {
+                core.info('No validation comment to delete.');
+              }
+            } else {
+              // Create or update the canonical comment
+              const body = `${marker}
+              ❌ The title must start with one of: \`${{ inputs.prefixes }}\`.
+              Current: \`${{ steps.title.outputs.text }}\`
+              Please update the title and re-run the checks.`;
+
+              if (existing) {
+                await github.rest.issues.updateComment({
+                  owner, repo, comment_id: existing.id, body
+                });
+                core.info(`Updated validation comment ${existing.id}`);
+              } else {
+                const res = await github.rest.issues.createComment({
+                  owner, repo, issue_number: number, body
+                });
+                core.info(`Created validation comment ${res.data.id}`);
+              }
             }
